--- a/painels/data_volume/data_volume.css
+++ b/painels/data_volume/data_volume.css
@@ -154,10 +154,10 @@ footer {
   color: var(--text-secondary);
 }
 
-
-
 .card-image {
-  width: 100%;
+  display: block;
+  margin: 0 auto;
+  width: 50%;
   height: 150px;
   object-fit: contain; 
   border-bottom: 1px solid #eee;
